# cellar

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/adapter-common/: Cargo.toml
adapters/adapter-common/src/: lib.rs
adapters/bloomberg/: Cargo.toml
adapters/bloomberg/src/: lib.rs
adapters/browser/: package.json
adapters/browser/src/: action-handler.ts  cdp-channel.ts  cdp-client.ts  dom-extractor.ts  download-watchdog.ts  element-mapper.ts  index.ts  mutation-tracker.ts  network-tap.ts  popup-watchdog.ts  sanitizer.ts  security-watchdog.ts  storage-watchdog.ts
adapters/browser/src/__tests__/: element-mapper.test.ts  integration.test.ts  sanitizer.test.ts
adapters/excel/: Cargo.toml
adapters/excel/src/: lib.rs
adapters/metatrader/: Cargo.toml
adapters/metatrader/src/: lib.rs
adapters/sap-gui/: Cargo.toml
adapters/sap-gui/src/: lib.rs
agent/: package.json
agent/src/: action-executor.test.ts  action-executor.ts  cel-bindings.ts  context-assembly.test.ts  context-assembly.ts  engine.test.ts  engine.ts  goal-runner.ts  index.ts  post-run.test.ts  post-run.ts  queue.test.ts  queue.ts  transcript.test.ts  transcript.ts  types.test.ts  types.ts  workflow-io.test.ts  workflow-io.ts
box/: install.sh  recommended.md
box/autostart/: macos-launchd.plist  windows-service.ps1
cel/: LICENSE
cel/cel-accessibility/: Cargo.toml
cel/cel-accessibility/examples/: dump_deep.rs  dump_page_content.rs  dump_text.rs  dump_tree.rs
cel/cel-accessibility/src/: lib.rs  linux.rs  macos.rs  tree.rs  windows.rs
cel/cel-cdp/: Cargo.toml
cel/cel-cdp/src/: client.rs  content.rs  discovery.rs  lib.rs  setup.rs
cel/cel-context/: Cargo.toml
cel/cel-context/examples/: context_snapshot.rs
cel/cel-context/src/: confidence.rs  element.rs  events.rs  lib.rs  merge.rs  resolve.rs  watchdog.rs
cel/cel-context/tests/: integration.rs  vision_fallback.rs
cel/cel-display/: Cargo.toml
cel/cel-display/src/: capture.rs  lib.rs  macos.rs  windows.rs  xcap_capture.rs
cel/cel-input/: Cargo.toml
cel/cel-input/src/: enigo_input.rs  inject.rs  lib.rs  macos.rs  windows.rs
cel/cel-llm/: Cargo.toml
cel/cel-llm/src/: client.rs  config.rs  error.rs  lib.rs
cel/cel-napi/: Cargo.toml  index.js  package.json
cel/cel-napi/src/: lib.rs
cel/cel-network/: Cargo.toml
cel/cel-network/src/: lib.rs  macos.rs
cel/cel-planner/: Cargo.toml
cel/cel-planner/src/: error.rs  history.rs  lib.rs  loop_detector.rs  planner.rs  prompt.rs  types.rs
cel/cel-store/: Cargo.toml
cel/cel-store/src/: filesystem.rs  lib.rs  memory.rs  pgvector.rs  schema.rs
cel/cel-store/tests/: integration.rs
cel/cel-vision/: Cargo.toml
cel/cel-vision/src/: lib.rs  openai_compat.rs  provider.rs
cli/: package.json
cli/src/: index.ts
cli/src/commands/: action.ts  adapter.ts  capture.ts  context.ts  history.ts  mcp.ts  memory.ts  run.ts  setup.ts  status.ts  train.ts  workflow.ts
docs/: TEST_INVENTORY.md  api-reference.md  browser-context-fusion.md  building-adapters.md  mcp-server.md
e2e/: adversarial.e2e.ts  agent-engine.e2e.ts  context-pipeline.e2e.ts  live-view.e2e.ts  package.json  playwright.config.ts  real-extraction.e2e.ts  recorder.e2e.ts  tsconfig.json
e2e/fixtures/: cel-harness.ts  mock-context.ts
e2e/fixtures/html/: generate-scenarios.ts
live-view/: package.json
live-view/dashboard/: next.config.mjs  package.json
live-view/dashboard/.next/: trace
live-view/dashboard/.next/cache/webpack/client-development/: index.pack.gz.old
live-view/dashboard/.next/cache/webpack/client-production/: index.pack  index.pack.old
live-view/dashboard/.next/cache/webpack/edge-server-production/: index.pack  index.pack.old
live-view/dashboard/.next/cache/webpack/server-development/: index.pack.gz.old
live-view/dashboard/.next/cache/webpack/server-production/: index.pack  index.pack.old
live-view/dashboard/.next/server/: server-reference-manifest.json  webpack-runtime.js
live-view/dashboard/.next/server/app/: page.js  page_client-reference-manifest.js
live-view/dashboard/.next/server/vendor-chunks/: @opentelemetry+api@1.9.0.js  @swc+helpers@0.5.5.js  next@14.2.35_@opentelemetry+api@1.9.0_@playwright+test@1.58.2_react-dom@18.3.1_react@18.3.1__react@18.3.1.js
live-view/dashboard/.next/static/chunks/: app-pages-internals.js  webpack.js
live-view/dashboard/.next/static/chunks/app/: layout.js  page.js
live-view/dashboard/.next/static/css/app/: layout.css
live-view/dashboard/.next/types/app/: layout.ts  page.ts
live-view/dashboard/app/: globals.css  layout.tsx  page.tsx
live-view/dashboard/app/executions/: page.tsx
live-view/dashboard/app/executions/[id]/: page.tsx
live-view/dashboard/app/extractions/: page.tsx
live-view/dashboard/app/extractions/[id]/: page.tsx
live-view/dashboard/app/store/: page.tsx
live-view/dashboard/components/: cost-speed-card.tsx  element-table.tsx  metric-card.tsx  source-breakdown.tsx
live-view/dashboard/lib/: api.ts
live-view/src/: context-feed.test.ts  context-feed.ts  index.ts  server.test.ts  server.ts
mcp-server/: package.json
mcp-server/src/: index.ts  server.ts
mcp-server/src/tools/: cel-action.ts  cel-context.ts  cel-knowledge.ts  cel-observe.ts
recorder/: package.json
recorder/src/: explicit.ts  index.ts  passive.ts  recorder.test.ts
registry/: package.json
registry/src/: client.ts  index.ts  install.ts  registry.test.ts
