[package]
name = "adapter-common"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Common adapter trait and types for CEL app-specific adapters"

[dependencies]
cel-context = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
