[package]
name = "adapter-metatrader"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "CEL adapter for MetaTrader 4/5 via MQL"

[dependencies]
adapter-common = { workspace = true }
cel-context = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
