[package]
name = "adapter-sap-gui"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "CEL adapter for SAP GUI via SAP Scripting API"

[dependencies]
adapter-common = { workspace = true }
cel-context = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
