[package]
name = "cel-accessibility"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL accessibility layer — UIA (Windows) and AXUIElement (macOS) bridge"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
