[package]
name = "cel-accessibility"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL accessibility layer — UIA (Windows) and AXUIElement (macOS) bridge"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["blocking"] }
tokio = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
