[package]
name = "cel-display"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL display layer — screen capture and virtual framebuffer"

[dependencies]
image = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
