[package]
name = "cel-display"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL display layer — screen capture and virtual framebuffer"

[dependencies]
image = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
xcap = "0.8"
