[package]
name = "cel-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL LLM provider layer — unified multi-provider LLM client"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
