[package]
name = "cel-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL Store — embedded SQLite database for local memory, knowledge, and audit trail"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
