[package]
name = "cel-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CEL vision layer — multi-provider vision model integration"

[dependencies]
cel-display = { workspace = true }
cel-llm = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
